--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,12 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   calendar_date_picker2: ^0.5.3
   flutter_svg: ^2.0.7
-
+  firebase_core:
+  firebase_auth:
+  firebase_storage: ^11.2.6
+  firebase_database: ^10.2.5
+  cloud_firestore: ^4.9.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
